kubernetes/apps/mail/stalwart-users/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: stalwart-users
  namespace: mail
  labels:
    route.scope: external
  annotations:
    external-dns.alpha.kubernetes.io/target: external.vaderrp.com
    gatus.home-operations.com/endpoint: |
      group: Mail
      url: "http://stalwart-users-frontend.mail.svc.cluster.local/"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Mail
    gethomepage.dev/name: Email Users
    gethomepage.dev/icon: mdi-email-edit
    gethomepage.dev/href: https://email-users.vaderrp.com
    gethomepage.dev/pod-selector: app.kubernetes.io/name=stalwart-users
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: gateway-public
      namespace: network
  hostnames:
    - email-users.vaderrp.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /api/
      backendRefs:
        - name: stalwart-users-backend
          port: 3000
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: stalwart-users-frontend
          port: 80
